# velnor

./: .dockerignore  .gitignore  .tmp-velnor-projects-primary-research.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  VELNOR_PROJECTS_SETUP.md  deny.toml  mise.toml  renovate.json
.github/: AGENTS.md
.github/workflows/: ci.yml  release-deb.yml  release.yml  renovate-validate.yml  renovate.yml
.velnor-compare/: comparison.md  velnor-job.html
.velnor-compare/lane-compare-run-27319103370/: jobs.json  report.md
.velnor-compare/lane-compare-run-27341195843/: jobs.json  report.md
.velnor-compare/lane-compare-run-27344537718/: jobs.json  report.md
.velnor-compare/lane-compare-run-27344544248/: jobs.json  report.md
.velnor-compare/lane-compare-run-27346543517/: jobs.json  report.md
.velnor-compare/lane-compare-run-27346553702/: jobs.json  report.md
.velnor-compare/lane-compare-run-27350691196/: jobs.json  report.md
.velnor-compare/lane-compare-run-29636145660/: jobs.json  report.md
config/: estate-repositories.json
crates/velnor-runner/: Cargo.toml  build.rs
crates/velnor-runner/debian/: postinst  postrm  preinst  prerm  velnor-daemon.service  velnor-daemon@.service  velnor-doctor.service  velnor-doctor.timer  velnor-doctor@.service  velnor-doctor@.timer  velnor.env
crates/velnor-runner/release/: .gitignore
crates/velnor-runner/src/: action.rs  admission.rs  attestation.rs  cache.rs  capacity.rs  checkout.rs  cli.rs  command_files.rs  compiler_cache.rs  config.rs  container.rs  executor.rs  fs_copy.rs  git_mirror.rs  github_adapter.rs  job_message.rs  lib.rs  main.rs  manifest.rs  mise.rs  plan.rs  platform.rs  preflight.rs  protocol.rs  release.rs  runner.rs  runtime_env.rs  script_step.rs  sd_notify.rs  slot_log.rs  storage.rs  telemetry.rs  workflow_authoring.rs  workflow_command.rs
crates/velnor-runner/src/release/: tests.rs
crates/velnor-runner/tests/: broker_protocol.rs  daemon_cli.rs
crates/velnor-tools/: Cargo.toml
crates/velnor-tools/src/: audit_ci.rs  lane_compare.rs  main.rs
docker/: job-mise.toml  job-ubuntu.Dockerfile
docs/: README.md  cache-gc-design.md  cancellation-during-broker-outage.md  capability-proposal-attest-build-provenance-v4.md  ci-performance-report-2026-06-11.md  ci-performance-report-2026-07-19.md  comparison.md  debian-apt-repo.md  decision-pkl.md  host-baseline-2026-07-18.md  implementation-roadmap.md  lane-compare-watch-design.md  log-format-contract.md  master-plan.md  mission.md  native-action-adapter-contract.md  org-fleet-migration.md  p3-performance-design-2026-06-11.md  perf-instant-cache-plan-2026-06-11.md  phase-0-detailed-handoff-2026-06-02.md  phase-0-github-runner-compat.md  phase-0-implementation-contract.md  phase-0-target-checklist.md  program-requirement-evidence.tsv  prompt.md  public-fixture-repo-plan.md  required-check-handoff.md  roadmap.md  runner-usage.md  rust-automation-policy.md  rust-build-cache-hygiene-velnor.md  stability-gap-audit-2026-06-11.md  storage-and-disk-pressure-2026-07-18.md  strict-capability-contract.md  target-live-runbook.md  velnor-fleet-health-investigation-2026-06-11.md  velnor-product-roadmap.md  vision.md
docs/archive/: README.md
docs/reference/: latest-runner-v2-refresh-2026-06-01.md  target-action-registry.md
docs/research/: actions-runner-architecture.md  actions-runner-source-audit-2026-06-01.md  config-language-comparison.md  deferred-pkl-brainstorm.md  github-actions-vs-pkl-vs-kcl.md  github-runner-job-message-contract-2026-06-01.md  github-runner-protocol-contract.md  kcl.md  latest-runner-v2-refresh-2026-06-01.md  normalized-plan-contract-2026-06-01.md  phase-0-implementation-plan.md  (+8 more)
plans/: 001-condition-unary-not-precedence.md  002-cache-staging-pid-collision.md  003-utf8-stream-drop.md  004-cache-hit-false-output.md  005-secret-masking-parity.md  006-cache-store-trust-scoping.md  007-executable-tool-store-scoping.md  008-secret-env-off-exec-argv.md  009-step-error-handling-parity.md  010-enforce-step-timeout-minutes.md  011-never-abandon-acquired-job.md  012-typed-github-api-error.md  013-mid-job-token-refresh-and-renewal.md  014-systemd-unit-hardening.md  015-purge-committed-run-logs-tokens.md  016-migrate-off-serde-yaml.md  017-cargo-deny-advisory-gate.md  018-broker-runservice-test-harness.md  019-drain-sigterm-regression-tests.md  020-log-feed-batch-and-mask-cost.md  021-hashfiles-streaming-parallel.md  022-io-buffering-and-ci-cache.md  023-composite-status-scope.md  024-docker-cleanup-on-double-start-failure.md  025-credential-file-permissions.md  026-container-options-denylist.md  027-dev-loop-and-cli-doc-drift.md  028-prompts-docs-consistency.md  029-cache-gc-spike.md  030-lane-compare-regression-mode.md  031-investigate-upload-artifact-remote-failure.md  032-investigate-cancellation-during-broker-outage.md  033-strict-capability-manifest.md  034-compiler-cache-backend-seam.md  035-canonical-storage-contract.md  036-capacity-controller-reclaim.md  037-cache-gc-and-accounting.md  038-job-env-injection.md  039-org-jit-multi-repo-fleet.md  040-services-parity.md  (+26 more)
prompts/: README.md  chainargos-migration-outstanding.checklist.md  chainargos-runner-parity.checklist.md  chainargos-runner-parity.md  fixture-proof.checklist.md  fixture-proof.md  github-ui-parity.checklist.md  github-ui-parity.md  target-workflow-coverage.checklist.md  target-workflow-coverage.md
scripts/: chainargos_rust_target_sequence.sh  chainargos_target_smoke.sh  check_runner_reference.py  fixture_audit.py  fixture_audit_test.sh  fixture_readiness.sh  fixture_readiness_test.sh  fixture_report.sh  fixture_report_test.sh  fixture_smoke.sh  fixture_smoke_defaults_test.sh  fixture_status.sh  fixture_status_test.sh  jackin_rust_linux_sequence.sh  jackin_target_smoke.sh  java_target_smoke.sh  live_evidence_common.sh  live_evidence_common_test.sh  live_host_doctor.sh  live_sequence_common.sh  live_sequence_common_test.sh  smoke_failure_evidence_test.sh  target_audit.py  target_smoke_common.sh  target_verify.sh  workflow_dispatch_common.sh  workflow_dispatch_common_test.sh
(+14 files in other folders)
