[workspace]
members = ["crates/velnor-runner", "crates/velnor-tools"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/donbeave/velnor"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive", "env"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.13.0", default-features = false, features = ["json", "rustls-tls", "native-tls", "blocking"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
globset = "0.4.16"
sha2 = "0.10.9"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
url = "2.5.4"
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.11.1"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
