[workspace]
members = ["crates/velnor-runner", "crates/velnor-tools"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tailrocks/velnor"

# Strip at link time: cross-built .debs cannot run the host `strip` on a
# foreign-arch ELF (cargo deb is invoked with --no-strip).
[profile.release]
strip = "symbols"

[workspace.dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive", "env"] }
# rust_crypto: jsonwebtoken >=10.4 requires exactly one crypto-provider feature
# or OAuth assertion signing panics at runtime.
jsonwebtoken = { version = "10.0.0", default-features = false, features = ["rust_crypto", "use_pem"] }
# native-tls-vendored: build OpenSSL from source so zigbuild cross/deb builds are
# hermetic (no host multiarch openssl headers; also unblocks the aarch64 deb leg).
reqwest = { version = "0.13.0", default-features = false, features = ["json", "native-tls", "native-tls-vendored", "blocking"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
rsa = { version = "0.9.8", features = ["pem"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
globset = "0.4.16"
sha2 = "0.11.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
url = "2.5.4"
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.11.1"
tokio-tungstenite = { version = "0.29", features = ["native-tls", "native-tls-vendored"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# Structured spans/events for performance analysis (master-plan P1.9): JSON
# span-close events with busy/idle timings land in <config>/logs/trace.jsonl;
# the `otel` feature adds an OTLP exporter gated on VELNOR_OTLP_ENDPOINT.
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
