[package]
name = "velnor-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Velnor self-hosted GitHub Actions runner daemon"

[[bin]]
name = "velnor-runner"
path = "src/main.rs"

# Debian packaging (cargo-deb). Build: `cargo deb -p velnor-runner`.
# Produces target/debian/velnor-runner_<version>_amd64.deb with the binary, a
# systemd unit, a config conffile, and maintainer scripts.
[package.metadata.deb]
maintainer = "Alexey Zhokhov <alexey@zhokhov.com>"
copyright = "2026, Tailrocks"
license-file = []
extended-description = """
Velnor is a self-hosted GitHub Actions runner daemon. This package installs the
velnor-runner binary, a systemd unit (velnor-daemon), and a config file at
/etc/velnor/velnor.env. Set GITHUB_TOKEN + VELNOR_URL there, then start the
service to register JIT runners and execute jobs in Docker."""
section = "devel"
priority = "optional"
depends = "$auto, git, curl, ca-certificates, docker.io | docker-ce"
conf-files = ["/etc/velnor/velnor.env"]
maintainer-scripts = "debian/"
assets = [
  ["target/release/velnor-runner", "usr/bin/", "755"],
  ["debian/velnor-daemon.service", "lib/systemd/system/velnor-daemon.service", "644"],
  ["debian/velnor.env", "etc/velnor/velnor.env", "640"],
  ["../../README.md", "usr/share/doc/velnor-runner/README.md", "644"],
]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
globset.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
zip.workspace = true
