[package]
name = "velnor-runner"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Velnor self-hosted GitHub Actions runner daemon"

[[bin]]
name = "velnor-runner"
path = "src/main.rs"

# Debian packaging (cargo-deb). 
# The release-deb.yml (on tag) handles:
#   cargo zigbuild --release --locked --target $TGT
#   cargo deb -p velnor-runner --target $TGT --no-build --deb-version "$VERSION"
# This produces target/<triple>/debian/velnor-runner_<ver>_<arch>.deb .
#
# The [[bin]] is automatically packaged (correct binary for --target).
# Extra assets (systemd unit, config, docs) + maintainer-scripts are included.
[package.metadata.deb]
maintainer = "Alexey Zhokhov <alexey@zhokhov.com>"
copyright = "2026, Tailrocks"
license-file = []
extended-description = """
Velnor is a self-hosted GitHub Actions runner daemon. This package installs the
velnor-runner binary, a systemd unit (velnor-daemon), and a config file at
/etc/velnor/velnor.env. Set GITHUB_TOKEN + VELNOR_URL there, then start the
service to register JIT runners and execute jobs in Docker."""
section = "devel"
priority = "optional"
depends = "$auto, git, curl, ca-certificates, docker.io | docker-ce"
conf-files = ["/etc/velnor/velnor.env"]
maintainer-scripts = "debian/"
assets = [
  ["debian/velnor-daemon.service", "lib/systemd/system/velnor-daemon.service", "644"],
  ["debian/velnor.env", "etc/velnor/velnor.env", "640"],
  ["../../README.md", "usr/share/doc/velnor-runner/README.md", "644"],
]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
globset.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
zip.workspace = true
