[package]
name = "velnor-tools"
version = "0.1.12"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "velnor-tools"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
tokio.workspace = true
